--- a/HealthCatalystPeopleSearch/HealthCatalystPeopleSearch.csproj
+++ b/HealthCatalystPeopleSearch/HealthCatalystPeopleSearch.csproj
@@ -7,10 +7,11 @@
     <TypeScriptToolsVersion>3.3.3333</TypeScriptToolsVersion>
     <IsPackable>false</IsPackable>
     <RootNamespace>VanderStack.HealthCatalystPeopleSearch</RootNamespace>
+    <UserSecretsId>6a39eb6a-c6a4-4382-aee2-e311b029b534</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.7"/>
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.ResponseCompression" Version="2.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.4" PrivateAssets="All" />
   </ItemGroup>
